test/fails/bad_casts/abstract1.lgl
tag coord a is vec<2>;
tag coord b is vec<2>;

`u app<`t : coord vec<2>, `u : vec<2>>(`t v, `t->`u m) {
    return v in `u; // `u is not a coord, so a bad cast
}

void main() {
    print 1;
}